Added contect us page

--- a/public/terms-of-use.html
+++ b/public/terms-of-use.html
@@ -1063,13 +1063,13 @@
                 govern
                 your use of our web pages located at</span><span class="c6 c8">&nbsp;</span><span class="c4"><a
                     class="c9"
-                    href="https://www.google.com/url?q=https://picsy.art&amp;sa=D&amp;source=editors&amp;ust=1685378407554099&amp;usg=AOvVaw3C-ErMpvCgV-DsDg7o0-pr">https://picsy.art</a></span><span
+                    href="/">https://picsy.art</a></span><span
                 class="c6 c8">&nbsp;</span><span class="c7 c6">operated by Deltabits.</span></p>
         <p class="c2"><span class="c6">Our Privacy Policy also governs your use of our Service and explains how we
                 collect,
                 safeguard and disclose information that results from your use of our web pages. Please read it
                 here</span><span class="c6 c8"><br></span><span class="c4"><a class="c9"
-                    href="https://www.google.com/url?q=https://picsy.art/privacy&amp;sa=D&amp;source=editors&amp;ust=1685378407554525&amp;usg=AOvVaw0yGgnvBRWvQlv3JwHgdFRA">&zwj;https://picsy.art/privacy</a></span>
+                    href="https://picsy.art/privacy-policy">&zwj;https://picsy.art/privacy-policy</a></span>
         </p>
         <p class="c2"><span class="c7 c6">Your agreement with us includes these Terms and our Privacy Policy
                 (&ldquo;Agreements&rdquo;). You acknowledge that you have read and understood Agreements, and agree to
